[metadata]
name = BUDI
version = attr: src.__version__
url=https://github.com/frost19k/BUDI
description = Refresh a list of docker containers if newer version exists
license = GNU General Public License v3.0
author=Hoodly Twokeys
author_email=hoodlytwokeys@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires = file: requirements.txt
packages = find:

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    budi = src.__main__:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
