[metadata]
name = BUDI
version = attr: BUDI.__version__
url=https://github.com/frost19k/BUDI
description = Refresh a list of docker containers if newer version exists
author = Hoodly Twokeys
author_email = hoodlytwokeys@gmail.com
license = GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires = file: requirements.txt
packages = find:
package_dir =
    =src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    budi = BUDI.__main__:main
